Fixed pre>code wrapping

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -144,6 +144,7 @@ pre.highlight {
     overflow-x: auto;
     > code {
         padding: 0;
+        white-space: pre;
     }
 }
 
